--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -18,6 +18,16 @@ div , span {
 /* Убираем внешние отступы */
 body, h1, h2, h3, h4, p, ul[class], ol[class], li, figure, figcaption, blockquote, dl, dd {
     margin: 0;
+    background: rgb(119, 117, 117);
+}
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 100%);
 }
 
 html{
@@ -39,13 +49,17 @@ li{
 }
 body {
     max-width: 1920px;
+    max-height: 1080px;
 }
 
 .bayan{
-    max-width: 920px;
-    width: 100%;
+    
+    width: 90%;
     margin: 0 auto;
-
+    box-shadow: 0 1px 8px rgba(#000,.25);
+    
+    /*position: absolute;
+    transform: translate(50%, 50%);*/
 }
 
 .bayan input {
@@ -54,7 +68,42 @@ body {
 }
 
 .tab-title{
+    width: 100%;
+    position: relative;
+    display: block;
+    padding: 1em;
+    background: linear-gradient(to bottom, rgba(254,254,254,1) 0%,rgba(209,209,209,1) 50%,rgba(219,219,219,1) 55%,rgba(226,226,226,1) 100%);
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid rgba(#000,.15);
+    box-shadow: inset 0 2px 0 #fff;
+    text-shadow: 0 1px 0 rgba(#fff,.75);
+    transition: all 0.4s cubic-bezier(0.865, 0.140, 0.095, 0.870);
     font-size: 43px;
     color: #2b2b31;
     float: left;
+}
+.tab-title:hover{
+    cursor: pointer;
+    color: #7c0b5a;
+}
+
+.memas-img{
+    overflow: hidden;
+    max-height: 0em;
+    position: relative;
+    padding: 0 1.5em;
+    box-shadow: inset 4px 0 0 0 #2980b9, inset 0 3px 6px rgba(#000,.75);
+    background: #363636;
+    background: linear-gradient(to bottom, rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%);
+    color:#eee;
+    transition: all 0.4s cubic-bezier(0.865, 0.140, 0.095, 0.870);
+}
+
+.memas-img:not(:last-of-type) {
+    box-shadow: inset 0 -2px 2px rgba(#000,.25), inset 4px 0 0 0 #2980b9, inset 0 3px 6px rgba(#000,.75);
+}
+    
+input[name='tab-group']:checked ~ .memas-img{
+    /* Get this as close to what height you expect */
+    max-height: 50em;
 }
