--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -5,7 +5,7 @@ ol[class] {
 }
 
 img {
-    max-width: 100%;
+    max-width: 55%;
     display: block;
 }
 
@@ -20,15 +20,7 @@ body, h1, h2, h3, h4, p, ul[class], ol[class], li, figure, figcaption, blockquot
     margin: 0;
     background: rgb(119, 117, 117);
 }
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 100%);
-}
+
 
 html{
     box-sizing: border-box;
@@ -52,58 +44,71 @@ body {
     max-height: 1080px;
 }
 
+.bayan:hover .bayan-item:hover .memas-img,
+.bayan .bayan-item--default .memas-img{
+    height: 80em;
+}
+
+.memas-img, .bayan:hover .memas-img{
+    height: 0;
+    overflow: hidden;
+    transition: height 0.25s;
+}
+
 .bayan{
-    
-    width: 90%;
+    padding: 0;
+    width: 50%;
     margin: 0 auto;
-    box-shadow: 0 1px 8px rgba(#000,.25);
-    
-    /*position: absolute;
-    transform: translate(50%, 50%);*/
+}
+
+.bayan .bayan-item{
+    background: linear-gradient(to bottom, rgba(254,254,254,1) 0%,rgba(209,209,209,1) 50%,rgba(219,219,219,1) 55%,rgba(226,226,226,1) 100%);
+
 }
 
 .bayan input {
     display: none;
-    width: 100%;
+    
 }
 
 .tab-title{
     width: 100%;
     position: relative;
     display: block;
-    padding: 1em;
-    background: linear-gradient(to bottom, rgba(254,254,254,1) 0%,rgba(209,209,209,1) 50%,rgba(219,219,219,1) 55%,rgba(226,226,226,1) 100%);
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid rgba(#000,.15);
-    box-shadow: inset 0 2px 0 #fff;
-    text-shadow: 0 1px 0 rgba(#fff,.75);
+    padding: 0.3em;
     transition: all 0.4s cubic-bezier(0.865, 0.140, 0.095, 0.870);
-    font-size: 43px;
+    font-size: 3vh;
     color: #2b2b31;
     float: left;
 }
 .tab-title:hover{
     cursor: pointer;
     color: #7c0b5a;
+    
+}
+
+label + label span:hover{
+    transform: translateY(-0.2em);
+}
+
+input:checked + label{
+    color: #2980b9;
 }
 
 .memas-img{
     overflow: hidden;
     max-height: 0em;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0 1.5em;
-    box-shadow: inset 4px 0 0 0 #2980b9, inset 0 3px 6px rgba(#000,.75);
     background: #363636;
-    background: linear-gradient(to bottom, rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%);
     color:#eee;
-    transition: all 0.4s cubic-bezier(0.865, 0.140, 0.095, 0.870);
+    transition: all 0.8s cubic-bezier(0.865, 0.140, 0.095, 0.870);
 }
 
-.memas-img:not(:last-of-type) {
-    box-shadow: inset 0 -2px 2px rgba(#000,.25), inset 4px 0 0 0 #2980b9, inset 0 3px 6px rgba(#000,.75);
-}
     
 input[name='tab-group']:checked ~ .memas-img{
-    /* Get this as close to what height you expect */
-    max-height: 50em;
+    max-height: 30em;
 }
